Fixed page not aligning center on cuat desktop

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -36,6 +36,7 @@
 
 	.wrapper {
 		position: relative;
+		width: 100%;
 		top: 40px;
 	}
 
